# controller/adminside.js
@@ -39,18 +39,35 @@ res.status(200).json(data)
 
 exports.getMonthlyrevenue= async(req ,res)=>{
     try {
+         let pageno = parseInt(req.query.pageno) || 1;
+
+  const limit = parseInt(req.query.limit) || 5;
+
+  const offset = (pageno - 1) * limit;
+
         if(req.user.role!='admin')
             return res.status(403).json({message: "no permission"})
         const data  = await sequelize.query(`select date_format(booking_time,'%M-%Y') as monthly ,sum(total_amount) earning
   from Bookings 
   where status = 'booked'
   and isDeleted =0
-  group by monthly;
+  group by monthly 
+  order by monthly
+  limit ${limit} offset ${offset}
 `,{type: QueryTypes.SELECT});
 if(data.length==0){
     return res.status(404).json({message:'not found'})
 } 
-return res.status(200).json(data)
+let count  = await sequelize.query(` select count(*) as total_page from(select date_format(booking_time,'%M-%Y') as monthly ,sum(total_amount) earning
+  from Bookings 
+  where status = 'booked'
+  and isDeleted =0
+  group by monthly 
+  order by monthly) as info
+`,{type: QueryTypes.SELECT});
+count = count[0].total_page;
+const total_pages = Math.ceil(count/limit);
+return res.status(200).json({data,currentPage:pageno,total_pages:total_pages})
     } catch (error) {
         res.status(500).json(error.message)
     }
@@ -59,6 +76,11 @@ return res.status(200).json(data)
 
 exports.getAlmostFullShows = async(req, res)=>{
     try {
+         let pageno = parseInt(req.query.pageno) || 1;
+
+  const limit = parseInt(req.query.limit) || 10;
+
+  const offset = (pageno - 1) * limit;
        if(req.user.role!='admin')
             return res.status(403).json({message: "no permission"});
         const data  = await sequelize.query(`select movie_name ,theater_name,start_time,booked as booked_seats , total_seats,percentage 
@@ -80,12 +102,34 @@ exports.getAlmostFullShows = async(req, res)=>{
  join Screens s on s.screen_id = m2.screen_id
  join Theaters t on m2.theater_id = t.theater_id
  join Movies mv on mv.movie_id = m2.movie_id) as allinfo
-where percentage > 90`,{type: QueryTypes.SELECT})
-console.log(data[0]);
+where percentage > 90 limit ${limit} offset ${offset}`,{type: QueryTypes.SELECT})
 if(data.length==0){
-    return res.status(404).json({message:'not found'})
+    return res.status(404).json(data)
 }
-return res.status(200).json(data)
+let count  = await sequelize.query(`select count(*) as total_page from (select movie_name ,theater_name,start_time,booked as booked_seats , total_seats,percentage 
+ from (select mv.name as movie_name,
+ t.name as theater_name,
+ m2.start_time,
+ bookingInfo.MT_id,
+ bookingInfo.booked,
+ s.total_seats,
+ (bookingInfo.booked/s.total_seats)*90 as percentage
+ from MovieTheaters m2 
+ join (
+ select MT_id,count(*) as booked 
+ from Bookings b
+ where status = 'booked' 
+ group by MT_id 
+ )as bookingInfo 
+ on bookingInfo.MT_id = m2.MT_id 
+ join Screens s on s.screen_id = m2.screen_id
+ join Theaters t on m2.theater_id = t.theater_id
+ join Movies mv on mv.movie_id = m2.movie_id) as allinfo
+where percentage > 90) as info`,{type: QueryTypes.SELECT})
+
+count = count[0].total_page;
+const total_pages = Math.ceil(count/limit);
+return res.status(200).json({data,currentPage:pageno,total_pages:total_pages})
     } catch (error) {
         res.status(500).json(error.message)
     }
@@ -95,17 +139,36 @@ return res.status(200).json(data)
 
 exports.getFrequentUsers = async (req, res)=> {
     try {
+                 let pageno = parseInt(req.query.pageno) || 1;
+
+  const limit = parseInt(req.query.limit) || 5;
+
+  const offset = (pageno - 1) * limit;
          if(req.user.role!='admin')
             return res.status(403).json({message: "no permission"});
-        const data = await sequelize.query(`select u.name,u.email,u.dateOfBirth, count(u.user_id) as total_tickets 
+        const data = await sequelize.query(`select u.name,u.email,u.dateOfBirth,u.createdAt, count(u.user_id) as total_tickets 
 from Bookings b join Users u on u.user_id = b.user_id 
  where b.status  = 'booked' and u.isDeleted = 0  and b.isDeleted  = 0
 group by b.user_id
-having total_tickets > 3;`,{type: QueryTypes.SELECT})
+having total_tickets > 3 
+order by u.createdAt desc
+LIMIT  ${limit} OFFSET ${offset}`,{type: QueryTypes.SELECT})
+
 if(data.length==0){
-    return res.status(404).json({message:'not found'})
+    return res.status(404).json(data)
 } 
-return res.status(200).json(data)
+let count  = await sequelize.query(`select count(*) as total_page from (select u.name,u.email,u.dateOfBirth,u.createdAt, count(u.user_id) as total_tickets 
+from Bookings b join Users u on u.user_id = b.user_id 
+ where b.status  = 'booked' and u.isDeleted = 0  and b.isDeleted  = 0
+group by b.user_id
+having total_tickets > 3
+order by u.createdAt
+ ) as info;`,{type: QueryTypes.SELECT})
+
+ count = count[0].total_page
+const total_pages = Math.ceil(count/limit);
+console.log(total_pages,count);
+return res.status(200).json({data,currentPage:pageno,total_pages:total_pages})
     } catch (error) {
         res.status(500).json(error.message)
     }
@@ -114,17 +177,33 @@ return res.status(200).json(data)
 
 exports.getTheaterRevenue = async(req, res)=>{
     try {
+         let pageno = parseInt(req.query.pageno) || 1;
+
+  const limit = parseInt(req.query.limit) || 5;
+
+  const offset = (pageno - 1) * limit;
         if(req.user.role!='admin')
             return res.status(403).json({message: "no permission"});
-        const data = await sequelize.query(`select t.name ,sum(total_amount) as revenue
+        const data = await sequelize.query(`select t.name ,sum(total_amount) as revenue,t.createdAt
 from Bookings b join MovieTheaters mt on mt.MT_id = b.MT_id join Theaters t on mt.theater_id= t.theater_id
  where b.status = 'booked' and b.isDeleted = 0 and mt.isdeleted =0
- group by mt.theater_id;
+ group by mt.theater_id
+ order by t.createdAt desc
+ limit ${limit} offset ${offset}
  `,{type: QueryTypes.SELECT})
 if(data.length==0){
-    return res.status(404).json({message:'not found'})
+    return res.status(404).json(data)
 } 
-return res.status(200).json(data)
+let count  = await sequelize.query(`select count(*) as total_page from (select t.name ,sum(total_amount) as revenue,t.createdAt
+from Bookings b join MovieTheaters mt on mt.MT_id = b.MT_id join Theaters t on mt.theater_id= t.theater_id
+ where b.status = 'booked' and b.isDeleted = 0 and mt.isdeleted =0
+ group by mt.theater_id
+ order by t.createdAt desc) as info
+ `,{type: QueryTypes.SELECT})
+
+ count = count[0].total_page
+const total_pages = Math.ceil(count/limit);
+return res.status(200).json({data,currentPage:pageno,total_pages:total_pages})
     } catch (error) {
         res.status(500).json(error.message)
     }
@@ -187,6 +266,12 @@ return res.status(200).json(data)
 
 exports.getCancelledUsers = async(req, res)=>{
     try {
+        let pageno = parseInt(req.query.pageno) || 1;
+
+  const limit = parseInt(req.query.limit) || 5;
+
+  const offset = (pageno - 1) * limit;
+
         if(req.user.role!='admin')
             return res.status(403).json({message: "no permission"});
         const data = await sequelize.query(`select u.name,u.email,u.phone,cen_bok.total_user as total_cencal_tickets from Users u join (select b.user_id as users,count(user_id) as total_user
@@ -194,11 +279,20 @@ from Bookings b
 where status = 'cancelled' 
 and isDeleted=0 
 group by user_id having total_user > 2) as cen_bok
-on cen_bok.users = u.user_id;`,{type: QueryTypes.SELECT})
+on cen_bok.users = u.user_id limit ${limit} offset ${offset}`,{type: QueryTypes.SELECT})
 if(data.length==0){
-    return res.status(404).json({message:'not found'})
+    return res.status(404).json(data)
 } 
-return res.status(200).json(data)
+let count  = await sequelize.query(`select count(*) as total_page from (select u.name,u.email,u.phone,cen_bok.total_user as total_cencal_tickets from Users u join (select b.user_id as users,count(user_id) as total_user
+from Bookings b 
+where status = 'cancelled' 
+and isDeleted=0 
+group by user_id having total_user > 2) as cen_bok
+on cen_bok.users = u.user_id) as info`,{type: QueryTypes.SELECT})
+count = count[0].total_page
+const total_pages = Math.ceil(count/limit);
+console.log(total_pages,count);
+return res.status(200).json({data,currentPage:pageno,total_pages:total_pages})
     } catch (error) {
         res.status(500).json(error.message)
     }
@@ -206,6 +300,12 @@ return res.status(200).json(data)
 
 exports.getCityWiseRevenue = async(req, res)=>{
 try {
+    let pageno = parseInt(req.query.pageno) || 1;
+
+  const limit = parseInt(req.query.limit) || 5;
+
+  const offset = (pageno - 1) * limit;
+
         if(req.user.role!='admin')
             return res.status(403).json({message: "no permission"});
         const data = await sequelize.query(`select
@@ -222,11 +322,32 @@ join Cities c
 on c.city_id = t.city_id
 where b.status = 'booked'
 group by c.city_id, c.name, c.state, c.country
-order by  revenue desc;`,{type: QueryTypes.SELECT})
+order by  revenue desc limit 
+${limit} offset ${offset}`,{type: QueryTypes.SELECT})
+
 if(data.length==0){
     return res.status(404).json({message:'not found'})
 } 
-return res.status(200).json(data)
+let count = await sequelize.query(` select count(*) as total_page from ( select
+c.name as city_name,
+c.state,
+c.country,
+sum(b.total_amount) as revenue
+from Bookings b
+join MovieTheaters mt 
+on mt.MT_id = b.MT_id 
+join Theaters t
+on mt.theater_id = t.theater_id
+join Cities c 
+on c.city_id = t.city_id
+where b.status = 'booked'
+group by c.city_id, c.name, c.state, c.country
+order by  revenue desc) as info
+`,{type: QueryTypes.SELECT})
+ count = count[0].total_page
+const total_pages = Math.ceil(count/limit);
+console.log(total_pages,count);
+return res.status(200).json({data,currentPage:pageno,total_pages:total_pages})
     } catch (error) {
         res.status(500).json(error.message)
     }
