# swagger.json
@@ -79,7 +79,7 @@
                   "example": "kunal@gmail.com"
                 },
                 "password": {
-                  "example": "kunal@123"
+                 "type": "string"
                 }
               }
             }
@@ -376,6 +376,18 @@
           "tags": [
             "Analytics"
         ],
+        "parameters": [
+          {
+            "name": "pageno",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -405,6 +417,17 @@
         "description": "",
          "tags": [
             "Analytics"
+        ],"parameters": [
+          {
+            "name": "pageno",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
         ],
         "responses": {
           "200": {
@@ -435,6 +458,17 @@
         "description": "",
          "tags": [
             "Analytics"
+        ],"parameters": [
+          {
+            "name": "pageno",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
         ],
         "responses": {
           "200": {
@@ -465,6 +499,17 @@
         "description": "",
          "tags": [
             "Analytics"
+        ],"parameters": [
+          {
+            "name": "pageno",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
         ],
         "responses": {
           "200": {
@@ -585,6 +630,17 @@
         "description": "",
          "tags": [
             "Analytics"
+        ],"parameters": [
+          {
+            "name": "pageno",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
         ],
         "responses": {
           "200": {
@@ -615,6 +671,17 @@
         "description": "",
          "tags": [
             "Analytics"
+        ],"parameters": [
+          {
+            "name": "pageno",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
         ],
         "responses": {
           "200": {
@@ -904,6 +971,10 @@
                    "type": "string",
                     "format": "time",
                   "example": "23:59:00"
+                },
+                "cityId":{
+                  "type": "integer",
+                  "example": "2"
                 }
               }
        
